# PrisonSIS-Tauri

./: COMMAND_AUTH_MATRIX_DRAFT.md  GUIDED_RECORD_SCHEMA_DRAFT.md  PROJECT_PLAN.md  PrisonSIS-QML.pro  README.md  build.sh  generate_prisonsis_ppt.py  generate_prisonsis_ppt_defense.py  generate_prisonsis_ppt_report_with_images.py  generate_prisonsis_ppt_variants.py  main.cpp  qml.qrc
.github/workflows/: build.yml  deploy.yml
docs/: 执法闭环与链能力评估_实施方案.md
docs/ppt-screenshots/: README.md
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: ppt-screenshots.spec.ts
frontend/src/: App.tsx  index.css  theme.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: db.rs  init_db.sql  lib.rs  main.rs
frontend/src/api/: index.ts  tauri.ts  types.ts
frontend/src/components/: AutoSizeTextarea.tsx  GlassHeader.tsx  GlassSidebar.css  GlassSidebar.tsx  GlassStatusBar.tsx  GlobalSearchPanel.tsx  RecordFullReadingPreview.css  RecordFullReadingPreview.tsx  RecordRichTextEditor.tsx  RecordViewModal.tsx
frontend/src/config/: guidedPrisonSchemas.ts  prisonRecordLocations.ts  recordAutoInkTokens.ts  recordTemplatesFallback.ts
frontend/src/context/: RecordEditSessionContext.tsx
frontend/src/lib/: globalSearch.ts  invokeError.ts  logI18n.ts  recordFormUtils.ts  (+2 more)
qml/: AppShell.qml  Main.qml  Theme.qml
qml/components/: GlassButton.qml  GlassCard.qml  GlassHeader.qml  GlassInput.qml  GlassPanel.qml  GlassSidebar.qml  GlassStatusBar.qml
qml/pages/: CriminalListPage.qml  HomePage.qml
(+16 files in other folders)
