[package]
name = "prison-sis"
version = "1.0.0"
description = "PrisonSIS — 监狱审讯笔录系统 Tauri 版"
authors = ["myBigger"]
license = "MIT"
repository = "https://github.com/myBigger/PrisonSIS-Tauri"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "prison_sis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
tauri-plugin-dialog = "2"
